--- a/package.json
+++ b/package.json
@@ -5,5 +5,29 @@
   "main": "server.js",
   "repository": "https://github.com/tataton/eve-outpost",
   "author": "T. Andrew Taton <thomas.andrew.taton@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
+    "connect-redis": "^3.3.3",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "helmet": "^3.12.0",
+    "passport": "^0.4.0",
+    "passport-oauth2": "^1.4.0",
+    "passport-oauth2-refresh": "^1.0.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "redis": "^2.8.0",
+    "sequelize": "^4.37.4"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && yarn && yarn run build"
+  },
+  "engines": {
+    "node": "9.9.0"
+  }
 }
