--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,11 @@
   "author": "T. Andrew Taton <thomas.andrew.taton@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "history": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
