--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "author": "T. Andrew Taton <thomas.andrew.taton@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "history": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
