--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,11 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.1",
-    "react-select": "^1.2.1",
+    "react-select": "^2.0.0-beta.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-css": "^2.3.1"
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.79.1"
   },
   "scripts": {
     "start": "react-scripts start",
