--- a/client/package.json
+++ b/client/package.json
@@ -38,5 +38,8 @@
     "/geography": {
       "target": "http://localhost:5000"
     }
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.2"
   }
 }
